Navbar weiß, Toggle-Farben angepasst, Hero Section weiß+rot

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <nav class="navbar">
         <a href="#hero">
-            <img src="Bilder/logo.png" alt="Sponsor a Smile Logo" class="logo-img">
+            <img src="Bilder/logo copy.png" alt="Sponsor a Smile Logo" class="logo-img">
         </a>
         
         <ul class="menu">
@@ -23,19 +23,45 @@
             <li><a href="#helfen" class="cta">Jetzt helfen</a></li>
         </ul>
 
+
         <div class="lang-toggle">
-            <label class="switch">
-                <input type="checkbox" id="lang-switch">
-                <span class="slider">
-                    <span class="slider-text-left">DE</span>
-                    <span class="slider-text-right">EN</span>
-                    <span class="slider-circle">DE</span>
-                </span>
-            </label>
+            <span class="lang active" data-lang="de">DE</span>
+            <span class="lang-sep">|</span>
+            <span class="lang" data-lang="en">EN</span>
         </div>
+
+
     </nav>
 
+    <section id="hero" class="hero">
+        <h1>Unzählige Kinder weltweit haben keinen Zugang zu Stiften, Büchern oder Schulen.<br>Wir zeigen, wie jeder helfen kann.</h1>
+    </section>
 
-    <script src="/script.js"></script>
+    <section id="bildung" class="section">
+        <h2>Bildung</h2>
+        <p>Inhalt kommt noch...</p>
+    </section>
+
+    <section id="stimmen" class="section">
+        <h2>Stimmen</h2>
+        <p>Inhalt kommt noch...</p>
+    </section>
+
+    <section id="wirkung" class="section">
+        <h2>Wirkung</h2>
+        <p>Inhalt kommt noch...</p>
+    </section>
+
+    <section id="ueber-uns" class="section">
+        <h2>Über uns</h2>
+        <p>Inhalt kommt noch...</p>
+    </section>
+
+    <section id="helfen" class="section">
+        <h2>Jetzt helfen</h2>
+        <p>Inhalt kommt noch...</p>
+    </section>
+
+    <script src="script.js"></script>
 </body>
 </html>
